--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -52,8 +52,11 @@
             }
             &:active{
               background:#f0f0f0;
-
             }
+          }
+          .active{
+            background:#f0f0f0;
+
           }
         }
       }
