--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -25,7 +25,7 @@ a {
   cursor: pointer;
 }
 body {
-  background: #fafafa;
+  background: #f0f0f0;
   font-family: $font-stack;
   position:relative;
 }
@@ -37,12 +37,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px;
+    margin: 0px auto;
     padding: 0px $padding-heavy;
+    max-width: $container-width;
 
     figure {
       width: auto;
-      height: 25px;
+      height: 20px;
       overflow:hidden;
       display: block;
       img {
@@ -67,7 +68,12 @@ header {
     }
   }
 }
-
+.container{
+  max-width: $container-width;
+  margin: 0 auto;
+}
 .components{
   padding:0px 40px;
 }
+
+
