--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -517,7 +517,8 @@ dialog {
   width: 100%;
 }
 #controle_aula #form_select_aluno {
-  background: #ebebeb;
+  background: #fff;
+  border: 1px solid #ccc;
   width: 100%;
   height: auto;
   padding: 5px 20px;
@@ -540,34 +541,42 @@ dialog {
   display: flex;
   justify-content: right;
   align-items: flex-end;
-  margin: 20px 0px 10px 0px;
+  margin: 25px 0px 7px 0px;
 }
 #controle_aula #bg_cursos nav.nav_cursos ul li {
   list-style: none;
 }
 #controle_aula #bg_cursos nav.nav_cursos ul li a {
-  padding: 10px 20px;
+  padding: 5px 20px 7px 20px;
   background: #fff;
   border: 1px solid #ccc;
   color: #333;
   user-select: none;
 }
 #controle_aula #bg_cursos nav.nav_cursos ul li a:hover {
-  background: #f6f6f6;
+  background: #ffd;
 }
 #controle_aula #bg_cursos nav.nav_cursos ul li a:active {
   background: #f0f0f0;
 }
 #controle_aula #bg_cursos nav.nav_cursos ul li .active {
-  background: #f0f0f0;
+  background: #ffd;
+  color: #0064ff;
 }
 #controle_aula #bg_cursos .bg_curso {
+  background: #fff;
   padding: 10px;
   border: 1px solid #ccc;
   display: none;
 }
 #controle_aula #bg_cursos .bg_curso h3 {
   padding: 10px;
+}
+#controle_aula #bg_cursos .title_info {
+  padding: 10px 0px 20px;
+}
+#controle_aula #bg_cursos .title_info .title_aluno_nome {
+  color: blue;
 }
 #controle_aula #bg_cursos .bg_bimestres {
   background: #fff;
@@ -588,6 +597,7 @@ dialog {
   border: 1px solid #ccc;
 }
 #controle_aula #bg_cursos .bg_bimestres .bimestres h2 {
+  font-weight: normal;
   flex-basis: 100%;
   height: 20px;
   font-size: 18px;
@@ -661,7 +671,7 @@ a {
 }
 
 body {
-  background: #fafafa;
+  background: #f0f0f0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
 }
@@ -675,12 +685,13 @@ header #header_center {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0px;
+  margin: 0px auto;
   padding: 0px 40px;
+  max-width: 1200px;
 }
 header #header_center figure {
   width: auto;
-  height: 25px;
+  height: 20px;
   overflow: hidden;
   display: block;
 }
@@ -700,6 +711,11 @@ header #header_center nav ul li a {
 header #header_center nav ul li a:hover {
   color: #99c1ff;
   border-bottom: 4px solid #66a2ff;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .components {
