Display dos cursos quando atualizado fixed

--- a/src/components/controle_aula/formAddAula.html
+++ b/src/components/controle_aula/formAddAula.html
@@ -46,33 +46,33 @@
   <div>
     <label>Bimestres</label>
     <select id='select_bimestre_add_aluno'>
-         <option value='bimestre_1'>Bimestre 1</option>
-         <option value='bimestre_2'>Bimestre 2</option>
-         <option value='bimestre_3'>Bimestre 3</option>
-         <option value='bimestre_4'>Bimestre 4</option>
-         <option value='bimestre_5'>Bimestre 5</option>
-         <option value='bimestre_6'>Bimestre 6</option>
+         <option value='bimestre 1'>Bimestre 1</option>
+         <option value='bimestre 2'>Bimestre 2</option>
+         <option value='bimestre 3'>Bimestre 3</option>
+         <option value='bimestre 4'>Bimestre 4</option>
+         <option value='bimestre 5'>Bimestre 5</option>
+         <option value='bimestre 6'>Bimestre 6</option>
     </select>
 
     <label>Aulas Nº:</label>
     <select id='aula_numero'>
-      <option value="aula_1">Aula 1</option>
-      <option value="aula_2">Aula 2</option>
-      <option value="aula_3">Aula 3</option>
-      <option value="aula_4">Aula 4</option>
-      <option value="aula_5">Aula 5</option>
-      <option value="aula_6">Aula 6</option>
-      <option value="aula_7">Aula 7</option>
-      <option value="aula_8">Aula 8</option>
-      <option value="aula_9">Aula 9</option>
-      <option value="aula_10">Aula 10</option>
-      <option value="aula_11">Aula 11</option>
-      <option value="aula_12">Aula 12</option>
-      <option value="aula_13">Aula 13</option>
-      <option value="aula_14">Aula 14</option>
-      <option value="aula_15">Aula 15</option>
-      <option value="aula_16">Aula 16</option>
-      <option value="aula_reposicao">Aula Reposição</option>
+      <option value="aula 01">Aula 1</option>
+      <option value="aula 02">Aula 2</option>
+      <option value="aula 03">Aula 3</option>
+      <option value="aula 04">Aula 4</option>
+      <option value="aula 05">Aula 5</option>
+      <option value="aula 06">Aula 6</option>
+      <option value="aula 07">Aula 7</option>
+      <option value="aula 08">Aula 8</option>
+      <option value="aula 09">Aula 9</option>
+      <option value="aula 10">Aula 10</option>
+      <option value="aula 11">Aula 11</option>
+      <option value="aula 12">Aula 12</option>
+      <option value="aula 13">Aula 13</option>
+      <option value="aula 14">Aula 14</option>
+      <option value="aula 15">Aula 15</option>
+      <option value="aula 16">Aula 16</option>
+      <option value="aula reposicão">Aula Reposição</option>
 
   </select>
   </div>
