--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -17,6 +17,9 @@
         <button class="btn-primary" id="btn_add_aluno" type="button">
           + Aluno
         </button>
+        <button class="btn-primary" id="btn_add_curso" type="button">
+          + Curso
+        </button>
         <button class="btn-primary" id="btn_add_aula" type="button">
           + Aula
         </button>
