--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -79,10 +79,14 @@
             border-top:0px;
             border-bottom:0px;
             color: #333;
+            font-size:14px;
+            text-transform: uppercase;
 
             user-select: none;
             &:hover{
-            background:#ffd;
+            background:#f8f8f8;
+            color: #333;
+
 
             //  color: $primary-color;
             }
@@ -91,9 +95,14 @@
             }
           }
           .active{
-            background:#ffd;
-            color: $primary-color;
+            background:#dddede;
+            //color: #fff;
+            border:0px;
+&:hover{
+ background:#dddede;
+ // color:#fff;
 
+}
 
           }
         }
@@ -106,7 +115,14 @@
       h3{ padding:10px;}
       display:none;
     }
-    .title_info{
+    .title_aluno_info{
+      span{float:left; margin:0px !important;}
+      .title_info_ra{
+        font-weight: normal;
+      }
+    
+    } 
+    .title{
       text-transform: uppercase;
       font-weight: bold;
 
@@ -116,24 +132,14 @@
       padding: 10px 0px 20px;
       flex-grow: 1;
       span{ padding:0px 5px;}
-      .title_ra{
-        display:none;
-
+   
+   
+      span[class*="web"]{
+        color:rgb(32, 97, 134);
       }
-      .title_aluno_nome{
-        display:none;
-
+      span[class*="inglês"]{
+        color:red;
       }
-      .title_curso_nome{
-        color:$secondary-color;
-      
-      }
-span[class*="web"]{
-  color:rgb(32, 97, 134);
-}
-span[class*="inglês"]{
-  color:red;
-}
 
    //excel
       span[class*="excel"]{ 
