--- a/src/assets/css/sass/controle_aula/_form_add_aula.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula.scss
@@ -12,17 +12,23 @@ dialog{
   @include form_flex;
   border: $border-set-default;
   position:fixed;
-  
   right: 0px; left:0px;
   top: 30%; 
   z-index: 2;
+  transition: all 2s;
+  background: #fff;
+
+  transform: scale(1);
+
   box-shadow: 0px 1px 2px #666;
+
   .close_form{
 right:0px;
 top:0px;
 padding: 5px 10px;
 position:absolute;
 cursor:pointer;
+
 &:hover{
   background:#ddd;
 }
@@ -31,6 +37,9 @@ cursor:pointer;
 }
 #form_add_aula{
   display:none;
+transition: all 2s;
+background:#fff;
+
     #data_hora{
         display:flex; 
         max-width: 100%;
@@ -39,6 +48,8 @@ cursor:pointer;
     }
 
 }
+
+
 #btn_novo_aluno{
   float:right;
   flex-basis: 100%;
