Btn open_close_aula - WIP

--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -189,8 +189,7 @@
           width: auto;
           max-width:300px;
           background: #ffc;
-          cursor: pointer;
-          height: 50px;
+          height: 55px;
           border: 1px solid #ccc;
           overflow: hidden;
           transition: height 0.5s;
@@ -202,27 +201,67 @@
             margin-top:10px;
             border:1px solid #999;
             overflow-y: scroll;
-            height:140px;
-            scrollbar-color: red yellow;
+            height:145px;
+            padding:5px;
        
 
           }
+       
+          .aula_numero{
+            text-transform: capitalize;
+            color:#000;
+     
+          }
+          .aula_data{
+            padding: 5px 0px;
+            svg{max-height:14px; margin-bottom:-2px;
+            color:$text-color}
 
+          }
      
         }
         .open_aula {
-          height: 220px;
+          height: 240px;
         }
+  
+         .btn_deletar_aula{
+           cursor:pointer;
+           float:left;
+           padding:3px;
+           margin-top:5px;
+           font-size:12px;
+           color:$text-color;
+           &:hover{
+             background: #f9f0f0;
+           color:rgb(219, 30, 30);
+
+           }
+         }
+         .btn_edit_aulas{
+           float:right;
+           padding:3px; 
+           margin-top:5px;
+           cursor:pointer;
+         }
+  
         .btn_open_close_aulas{
+          cursor: pointer;
           position:absolute; 
          right:0px;
          top:0px;
           font-size:16px;
-          background:#eed; 
+          background:#dd9; 
           text-align: center;
-          height:25px;
-          width:40px;
+          height:22px;
+          width:30px;
           padding:2px;
+          color:$text-color;
+          font-stretch: expanded;
+          border-radius:0px 0px 0px 3px;
+          svg{
+            margin-top:1px;
+          }
+          
           &:active{
             background:#aa9;
             user-select: none;
