--- a/src/assets/css/sass/controle_aula/_form_add_aula.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula.scss
@@ -63,7 +63,28 @@ background:#fff;
     }
 
 }
-
+.edit_form{
+  background:#ffc !important;
+  div{
+    label{
+      background:transparent !important;
+      
+    }
+  }
+  .disabled { 
+    position : relative; 
+    color    : grey;
+}
+.disabled:after {
+    position :absolute;
+    left     : 0;
+    top      : 0;
+    width    : 100%;
+    height   : 100%;
+    content  :' ';
+}
+ 
+}
 
 #btn_novo_aluno{
   float:right;
