--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -1,6 +1,133 @@
 
 <div id='bg_forms_add'>
 
+<!------------------------------------ADD ALUNO----------------------->
+<form id="form_add_aluno" class="forms">
+  <span class="close_form">X</span>
+  <h3>Adicionar Aluno</h3>
+  <div>
+    <label for="nome">Aluno:</label><input required id="nome" type="text" placeholder='Digite o nome do aluno' />
+    <label for="add_aluno_ra">RA:</label>
+    <input required id="add_aluno_ra" type="text" list="add_aluno_datalist_ra"/>
+<datalist id='add_aluno_datalist_ra'>
+  <option value='tesette'></option>
+</datalist>
+  </div>
+  <div>
+    <label><span class='required'>&nbsp;&nbsp; *</span> Curso:</label> 
+    <select required id='curso_nome'>
+      <option selected="true" disabled value=''>Selecione o Curso</option>
+      <option class='informatica' data-abreviation='IFK' value='Informática KIDS'>Informática KIDS</option>
+      <option class='informatica' data-abreviation='IFC' value='Informática Completo'>Informática Completo</option>
+      <option class='informatica' data-abreviation='IFPRO' value='Informática Profissional'>Informática Profissional</option>
+      <option class='informatica' data-abreviation='IFP' value='Informática Prática'>Informática Prática</option>
+      <option class='ingles' data-abreviation='IGK' value='Inglês KIDS'>Inglês KIDS</option>
+      <option class='ingles' data-abreviation='IGPT' value='Inglês Pre-teen'>Inglês Pre-teen</option>
+      <option class='ingles' data-abreviation='IGB' value='Inglês Básico'>Inglês Básico</option>
+      <option class='ingles' data-abreviation='IGI' value='Inglês Intermediário'>Inglês Intermediário</option>
+      <option class='ingles' data-abreviation='IGA' value='Inglês Avançado'>Inglês Avançado</option>
+      <option class='excel' data-abreviation='EXA' value='Excel Avançado'>Excel Avançado</option>
+      <option class='web' data-abreviation='DWB' value='Desenvolvimento Web'>Desenvolvimento Web</option>
+      <option class='bd' data-abreviation='BDBMYSQL' value='Banco de Dados Básico(MySQL)'>Banco de Dados Básico MySQL</option>
+    </select>
+  </div>
+  <input type="submit" value="Salvar" />
+</form>
+
+<!--------------------------------------ADD CURSOS----------------------->
+
+<form id="form_add_curso" class="forms">
+  <span class="close_form">X</span>
+  <h3>Adicionar Curso</h3>
+  <div>
+    <label for="nome">Aluno:</label>
+    <select required id='select_aluno_add_curso'></select>
+    
+  </div>
+  <div>
+    <label><span class='required'>&nbsp;&nbsp;*</span> Curso:</label> 
+    <select required id='add_curso_nome_curso'>
+      <option selected="true" disabled="disabled" value=''>Selecione o Curso</option>
+      <option class='informatica' data-abreviation='IFK' value='Informática KIDS'>Informática KIDS</option>
+      <option class='informatica' data-abreviation='IFC' value='Informática Completo'>Informática Completo</option>
+      <option class='informatica' data-abreviation='IFPRO' value='Informática Profissional'>Informática Profissional</option>
+      <option class='informatica' data-abreviation='IFP' value='Informática Prática'>Informática Prática</option>
+      <option class='ingles' data-abreviation='IGK' value='Inglês KIDS'>Inglês KIDS</option>
+      <option class='ingles' data-abreviation='IGPT' value='Inglês Pre-teen'>Inglês Pre-teen</option>
+      <option class='ingles' data-abreviation='IGB' value='Inglês Básico'>Inglês Básico</option>
+      <option class='ingles' data-abreviation='IGI' value='Inglês Intermediário'>Inglês Intermediário</option>
+      <option class='ingles' data-abreviation='IGA' value='Inglês Avançado'>Inglês Avançado</option>
+      <option class='excel' data-abreviation='EXA' value='Excel Avançado'>Excel Avançado</option>
+      <option class='web' data-abreviation='DWB' value='Desenvolvimento Web'>Desenvolvimento Web</option>
+      <option class='bd' data-abreviation='BDBMYSQL' value='Banco de Dados Básico(MySQL)'>Banco de Dados Básico MySQL</option>
+    </select>
+  </div>
+  <input type="submit" value="Salvar" />
+</form>
+<!----------------------------------------------------------------------->
+<!-------------------------------------------ADD AULA----------------------->
+<form id="form_add_aula" class="forms">
+  <span class="close_form">X</span>
+  <h3>Adicionar Aula</h3>
+
+  <div>
+      <label for="nome">Nome:</label>
+      <select id='select_aluno_add_aula'>
+          <option></option>
+      </select>
+</div>
+
+  <div><label>Curso:</label>
+    <select id='select_curso_add_aluno'>
+      <option></option>
+      </select>
+    </div>
+  <div>
+    <label>Bimestres</label>
+    <select required id='select_bimestre_add_aluno'>
+     
+      <option value='' disabled  selected>Selecione o Bimestre</option>
+         <option value='bimestre 1'>Bimestre 1</option>
+         <option value='bimestre 2'>Bimestre 2</option>
+         <option value='bimestre 3'>Bimestre 3</option>
+         <option value='bimestre 4'>Bimestre 4</option>
+         <option value='bimestre 5'>Bimestre 5</option>
+         <option value='bimestre 6'>Bimestre 6</option>
+    </select>
+
+    <label>Aulas Nº:</label>
+    <select required id='aula_numero' disabled>
+      <option value='' disabled selected>Selecione a Aula</option>
+
+      <option value="aula 01">Aula 1</option>
+      <option value="aula 02">Aula 2</option>
+      <option value="aula 03">Aula 3</option>
+      <option value="aula 04">Aula 4</option>
+      <option value="aula 05">Aula 5</option>
+      <option value="aula 06">Aula 6</option>
+      <option value="aula 07">Aula 7</option>
+      <option value="aula 08">Aula 8</option>
+      <option value="aula 09">Aula 9</option>
+      <option value="aula 10">Aula 10</option>
+      <option value="aula 11">Aula 11</option>
+      <option value="aula 12">Aula 12</option>
+      <option value="aula 13">Aula 13</option>
+      <option value="aula 14">Aula 14</option>
+      <option value="aula 15">Aula 15</option>
+      <option value="aula 16">Aula 16</option>
+      <option value="aula reposicão">Aula Reposição</option>
+
+  </select>
+  </div>
+
+  <div id="data_hora">
+    <label>Data:</label><input required id="data" type="date" /> <label>Horário:</label
+    ><input id="horario" />
+  </div>
+  <div><label>Tema:</label><input  required  id="tema" type="text" /></div>
+  <div><label>Detalhes:</label><textarea  required  id="detalhes"></textarea></div>
+  <input type="submit" value="Salvar" />
+</form>
 </div>
 <div class="components" id="controle_aula">
   <h1>Controle de Aula</h1>
@@ -37,5 +164,5 @@
   <!--components-->
 
 </div>
-
+<script src="./components/controle_aula/formAddAluno.js"></script>
 <script src="./components/controle_aula/index.js"></script>
