--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -164,5 +164,6 @@
   <!--components-->
 
 </div>
-<script src="./components/controle_aula/formAddAluno.js"></script>
-<script src="./components/controle_aula/index.js"></script>
+<!--
+<script  type='module' src="./components/controle_aula/index.js"></script>
+-->
