--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -45,7 +45,7 @@
   }
   #bg_cursos {
     
-  nav.nav_cursos {
+  nav.nav_cursos_aluno {
  
       background-color: #fff;
       border: $border-set-default;
