--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -217,6 +217,12 @@
             padding: 5px 0px;
             svg{max-height:14px; margin-bottom:-2px;
             color:$text-color}
+            .aula_data_info{
+       
+
+       
+            }
+       
 
           }
      
