--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -497,10 +497,14 @@ dialog {
 }
 
 .edit_form {
-  background: #ffc !important;
+  background: #ffd !important;
 }
 .edit_form div label {
   background: transparent !important;
+}
+.edit_form div input, .edit_form div select, .edit_form div textarea {
+  background: #ffe;
+  border: 1px solid #aa9473;
 }
 .edit_form .disabled {
   position: relative;
@@ -699,7 +703,8 @@ input:disabled {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-around;
-  border: 1px solid #ccc;
+  background: #eee;
+  margin-bottom: 10px;
 }
 #controle_aula #bg_cursos .bg_bimestres .bimestres h2 {
   font-weight: normal;
@@ -718,12 +723,12 @@ input:disabled {
   margin-top: 10px;
   width: auto;
   max-width: 300px;
-  background: #ffc;
+  background: #f8f8f6;
   height: 55px;
-  border: 1px solid #ccc;
+  border: 0px solid #aaa;
   overflow: hidden;
   transition: height 0.5s;
-  box-shadow: 0px 1px 0px #ccc;
+  box-shadow: 0px 1px 2px #666;
   font-size: 13px;
   padding: 5px;
 }
