--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -25,7 +25,7 @@ a {
   cursor: pointer;
 }
 body {
-  background: #f0f0f0;
+  background: #ddd;
   font-family: $font-stack;
   position:relative;
 }
